--- a/src/CombatAnalysis.App/Views/ViewTemplates/BasicTemplateView.xaml
+++ b/src/CombatAnalysis.App/Views/ViewTemplates/BasicTemplateView.xaml
@@ -187,12 +187,13 @@
 
         <StackPanel Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10" mvx:Bi.nd="Command GeneralAnalysisCommand"
                     Visibility="{Binding ResponseStatus, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
-            <Icon:PackIconMaterial Kind="ChartTimelineVariantShimmer" Style="{StaticResource menuButtonIcon}" mvx:Bi.nd="Command GeneralAnalysisCommand">
+            <Icon:PackIconMaterial Kind="ChartTimelineVariantShimmer" Style="{StaticResource menuButtonIcon}" mvx:Bi.nd="Command GeneralAnalysisCommand" Foreground="White">
                 <Icon:PackIconMaterial.InputBindings>
                     <MouseBinding Command="{Binding GeneralAnalysisCommand}" Gesture="LeftClick"/>
                 </Icon:PackIconMaterial.InputBindings>
             </Icon:PackIconMaterial>
-            <ProgressBar Minimum="0" Maximum="{Binding UploadingCombatsCount}" Value="{Binding UploadedCombatsCount}" Height="10" Width="150">
+            <ProgressBar Style="{DynamicResource ProgressBarStyle2}" Minimum="0" Maximum="{Binding UploadingCombatsCount}" Value="{Binding UploadedCombatsCount}" 
+                         Height="15" Width="150">
                 <ProgressBar.ToolTip>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="Already uploaded: "/>
