--- a/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
+++ b/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
@@ -332,8 +332,8 @@
                 </Icon:PackIconMaterial.InputBindings>
             </Icon:PackIconMaterial>
 
-            <StackPanel Margin="0 10" Orientation="Horizontal" Visibility="{Binding CombatInformationStep, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
-                <StackPanel Margin="55 0">
+            <StackPanel Orientation="Horizontal" Visibility="{Binding CombatInformationStep, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
+                <StackPanel Margin="25 0">
                     <TextBlock Text="{loc:Loc AverageDamagePerSecond}" FontSize="12" TextWrapping="Wrap" Width="130" TextAlignment="Center" Foreground="White" />
                     <TextBlock Text="{Binding AverageDamagePerSecond, StringFormat=0.00}" TextAlignment="Center" Margin="0 5" FontSize="15" Foreground="White" FontWeight="Bold" VerticalAlignment="Center" />
                 </StackPanel>
@@ -409,7 +409,7 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Visibility="{Binding CombatInformationStep, Converter={StaticResource IntToVisibility}, ConverterParameter=true:4}">
-                <StackPanel Margin="55 0">
+                <StackPanel Margin="25 0">
                     <TextBlock Text="{loc:Loc IndexOfDeath}" FontSize="12" TextWrapping="Wrap" Width="130" TextAlignment="Center" Foreground="White" />
                     <TextBlock Text="{Binding IndexOfDeath, StringFormat=0.00}" TextAlignment="Center" Margin="0 5" FontSize="15" Foreground="White" FontWeight="Bold" VerticalAlignment="Center" />
                 </StackPanel>
